placeholder content, class adjustments

--- a/index.html
+++ b/index.html
@@ -1,60 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="a portfolio page for Elliot Hill" />
-    <title>Portfolio | EVH</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <navbar id="navbar">
-            <h2 class="nav-heading" id="nav-header">EVH | Web Developer</h2>
-            <div class="mobile-wrapper">
-                <i class="fa-solid fa-bars mobile-only"></i>
-                <ul id="nav-list">
-                    <li class="nav-link"><a href="#welcome-section" id="nav-link1" accesskey="a">About</a></li>
-                    <li class="nav-link"><a href="#projects" id="nav-link2" accesskey="w">Work</a></li>
-                    <li class="nav-link"><a href="#contact" id="nav-link3" accesskey="c">Contact</a></li>
-                </ul>
-            </div>
-        </navbar>
-    </header>
-    <main>
-        <section id="welcome-section" role="region" aria-labelledby="welcome-section">
-            <h1 class="section-heading main">Hi there, I'm Elliot.</h1>
-            <div class="about-text"></div>
-        </section>
-        <section id="projects" role="region" aria-labelledby="work-projects-section">
-            <h2 class="section-heading">Projects</h2>
-            <div class="projects-gallery">
-                <div class="project-tile" id="project1">
-                    <h3>Project1</h3>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="a portfolio page for Elliot Hill" />
+        <title>Portfolio | EVH</title>
+        <link rel="stylesheet" href="styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet" />
+    </head>
+    <body>
+        <main>
+            <header>
+                <navbar id="navbar">
+                    <h2 class="nav-heading heading" id="nav-header">
+                        EVH | Web Developer
+                    </h2>
+                    <div class="mobile-wrapper">
+                        <i class="fa-solid fa-bars mobile-only"></i>
+                        <ul class="no-dec" id="nav-list">
+                            <li class="nav-link heading">
+                                <a
+                                    href="#welcome-section"
+                                    id="nav-link1"
+                                    accesskey="a"
+                                    >About</a
+                                >
+                            </li>
+                            <li class="nav-link heading">
+                                <a href="#projects" id="nav-link2" accesskey="w"
+                                    >Work</a
+                                >
+                            </li>
+                            <li class="nav-link heading">
+                                <a href="#contact" id="nav-link3" accesskey="c"
+                                    >Contact</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+                </navbar>
+            </header>
+            <section
+                id="welcome-section"
+                role="region"
+                aria-labelledby="welcome-section">
+                <h1 class="section-heading heading main">
+                    Hi there, I'm Elliot.
+                </h1>
+                <div class="about-text">
+                    <p class="text-block">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing
+                        elit. Deleniti quis quaerat hic minima asperiores neque,
+                        numquam nostrum nemo quia accusantium qui sapiente
+                        pariatur, at consectetur blanditiis sed, delectus
+                        eveniet. Animi? Sit deleniti, quos at numquam, explicabo
+                    </p>
+                    <p class="text-block">
+                        nulla ducimus provident modi ratione consequatur
+                        architecto ea, incidunt suscipit. Perferendis sint
+                        veritatis, magni voluptates velit repellat
+                        necessitatibus, quaerat labore, minus sit earum optio.
+                    </p>
                 </div>
-                <div class="project-tile" id="project2">
-                    <h3>Project2</h3>
+            </section>
+            <section
+                id="projects"
+                role="region"
+                aria-labelledby="work-projects-section">
+                <h2 class="section-heading heading">Projects</h2>
+                <div class="projects-gallery">
+                    <div class="project-tile" id="project1">
+                        <h3 class="heading">Project1</h3>
+                        <div class="img-container tile-thumb"></div>
+                        <div class="project-description">
+                            <p>This is a description of a project.</p>
+                        </div>
+                    </div>
+                    <div class="project-tile" id="project2">
+                        <h3 class="heading">Project2</h3>
+                        <div class="img-container tile-thumb"></div>
+                        <div class="project-description">
+                            <p>This is a description of a project.</p>
+                        </div>
+                    </div>
+                    <div class="project-tile" id="project3">
+                        <h3 class="heading">Project3</h3>
+                        <div class="img-container tile-thumb"></div>
+                        <div class="project-description">
+                            <p>This is a description of a project.</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="project-tile" id="project3">
-                    <h3>Project3</h3>
+            </section>
+            <section
+                id="contact"
+                role="region"
+                aria-labelledby="contact-section">
+                <h2 class="section-heading heading">Contact Me</h2>
+                <div class="contact">
+                    <ul class="contact-links no-dec">
+                        <li class="contact-link heading">
+                            <a
+                                class="contact-link1"
+                                id="profile-link"
+                                target="_blank"
+                                ><span class="sr-only">GitHub</span><i class="fa-brands fa-github"></i></a
+                            >
+                        </li>
+                        <li class="contact-link heading">
+                            <a class="contact-link2" target="_blank"
+                                ><span class="sr-only">LinkedIn</span><i class="fa-brands fa-linkedin"></i></a
+                            >
+                        </li>
+                        <li class="contact-link heading">
+                            <a class="contact-link3" target="_blank"><span class="sr-only">Codepen</span><i class="fa-brands fa-codepen"></i></a>
+                        </li>
+                        <li class="contact-link heading">
+                            <a class="contact-link4" target="_blank"><span class="sr-only">Threads</span><i class="fa-brands fa-threads"></i></a>
+                        </li>
+                    </ul>
                 </div>
-            </div>
-        </section>
-        <section id="contact" role="region" aria-labelledby="contact-section">
-            <h2 class="section-heading">Contact Me</h2>
-            <div class="contact">
-                <ul class="contact-links">
-                    <li class="contact-link"><a class="contact-link1" id="profile-link" target="_blank">GitHub</a></li>
-                    <li class="contact-link"><a class="contact-link2" target="_blank">LinkedIn</a></li>
-                    <li class="contact-link"><a class="contact-link3" target="_blank">Codepen</a></li>
-                    <li class="contact-link"><a class="contact-link4" target="_blank">Threads</a></li>
-                </ul>
-            </div>
-        </section>
-    </main>
-    <script src="https://kit.fontawesome.com/db1ff0de8c.js" crossorigin="anonymous"></script>
-</body>
+            </section>
+        </main>
+        <script
+            src="https://kit.fontawesome.com/db1ff0de8c.js"
+            crossorigin="anonymous"></script>
+    </body>
 </html>
