putting aside jquery for time being

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
             crossorigin="anonymous"
             referrerpolicy="no-referrer"></script>
-        <script>
+        <!-- <script>
             $(document).ready(function () {
                 $(".project-description>p").each(function () {
                     const maxChars = 100;
@@ -40,8 +40,8 @@
                     }
                     $(".readMore .truncated ").toggle();
                 });
-            });
-        </script>
+            }); -->
+        <!-- </script> -->
     </head>
     <body>
         <main>
@@ -109,35 +109,38 @@
                 <div class="projects-gallery">
                     <div class="project-tile" id="project1">
                         <h3 class="heading">Project1</h3>
+
                         <div class="img-container tile-thumb"></div>
                         <div class="project-description">
-                            <p class="readMore">
+                            <!-- <p class="readMore">
                                 This is a description of a project. This should
                                 show a read more link.
-                            </p>
-                            <!-- <p>
-                                This is a description of a project.<span
-                                    class="read-more hide"
-                                    id="read-more1"> Read more</span>
                             </p> -->
+                            <p>
+                                This is a description of a project.
+                                <span class="read-more hide" id="read-more1">
+                                    Read more</span
+                                >
+                            </p>
                         </div>
                     </div>
                     <div class="project-tile" id="project2">
                         <h3 class="heading">Project2</h3>
                         <div class="img-container tile-thumb"></div>
                         <div class="project-description">
-                            <p class="readMore">
+                            <!-- <p class="readMore">
                                 Lorem ipsum dolor sit, amet consectetur
                                 adipisicing elit. Deleniti quis quaerat hic
                                 minima asperiores neque, numquam nostrum nemo
                                 quia accusantium qui sapiente pariatur, at
                                 consectetur blanditiis sed, delectus eveniet.
-                            </p>
-                            <!-- <p>
-                                This is a description of a project.<span
-                                class="read-more hide"
-                                id="read-more1"> Read more</span>
                             </p> -->
+                            <p>
+                                This is a description of a project.
+                                <span class="read-more hide" id="read-more1">
+                                    Read more</span
+                                >
+                            </p>
                         </div>
                     </div>
                     <div class="project-tile" id="project3">
@@ -147,11 +150,12 @@
                             <p class="readMore">
                                 This is a description of a project.
                             </p>
-                            <!-- <p>
-                                This is a description of a project.<span
-                                    class="read-more hide"
-                                    id="read-more1"> Read more</span>
-                            </p> -->
+                            <p>
+                                This is a description of a project.
+                                <span class="read-more hide" id="read-more1">
+                                    Read more</span
+                                >
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -165,6 +169,7 @@
                     <ul class="contact-links no-dec">
                         <li class="contact-link heading">
                             <a
+                                href="#"
                                 class="contact-link1"
                                 id="profile-link"
                                 target="_blank"
@@ -173,19 +178,19 @@
                             ></a>
                         </li>
                         <li class="contact-link heading">
-                            <a class="contact-link2" target="_blank"
+                            <a href="#" class="contact-link2" target="_blank"
                                 ><span class="sr-only">LinkedIn</span
                                 ><i class="fa-brands fa-linkedin"></i
                             ></a>
                         </li>
                         <li class="contact-link heading">
-                            <a class="contact-link3" target="_blank"
+                            <a href="#" class="contact-link3" target="_blank"
                                 ><span class="sr-only">Codepen</span
                                 ><i class="fa-brands fa-codepen"></i
                             ></a>
                         </li>
                         <li class="contact-link heading">
-                            <a class="contact-link4" target="_blank"
+                            <a href="#" class="contact-link4" target="_blank"
                                 ><span class="sr-only">Threads</span
                                 ><i class="fa-brands fa-threads"></i
                             ></a>
