added actual text content

--- a/index.html
+++ b/index.html
@@ -86,18 +86,25 @@
                 </h1>
                 <div class="about-text">
                     <p class="text-block">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing
-                        elit. Deleniti quis quaerat hic minima asperiores neque,
-                        numquam nostrum nemo quia accusantium qui sapiente
-                        pariatur, at consectetur blanditiis sed, delectus
-                        eveniet.
+                        I am a web developer and junior software engineer with
+                        over <span class="em">10 years of experience</span> in customer service.
                     </p>
                     <p class="text-block">
-                        Animi? Sit deleniti, quos at numquam, explicabo nulla
-                        ducimus provident modi ratione consequatur architecto
-                        ea, incidunt suscipit. Perferendis sint veritatis, magni
-                        voluptates velit repellat necessitatibus, quaerat
-                        labore, minus sit earum optio.
+                        <span class="em">In 2023,</span> I graduated from a full stack software
+                        engineering boot camp, where I gained experience with
+                        the latest front- and back-end programming languages,
+                        tools, and methodologies—including <span class="em">HTML, CSS, SASS,
+                        JavaScript, Node.JS, React.JS, MongoDB, Mongoose, SQL,
+                        Python, and Django</span>—and completed a number of projects
+                        focused on the real-world applications of web
+                        development principles and best practices.
+                    </p>
+                    <p class="text-block">
+                        In my previous role as an enterprise customer support
+                        representative, I developed a strong customer-centric
+                        mindset, facilitated cross-functional communication
+                        between product and engineering teams, and consistently
+                        exceeded expectiations in customer satisfaction.
                     </p>
                 </div>
             </section>
@@ -169,7 +176,7 @@
                     <ul class="contact-links no-dec">
                         <li class="contact-link heading">
                             <a
-                                href="#"
+                                href="https://github.com/elliotvhill"
                                 class="contact-link1"
                                 id="profile-link"
                                 target="_blank"
@@ -178,19 +185,28 @@
                             ></a>
                         </li>
                         <li class="contact-link heading">
-                            <a href="#" class="contact-link2" target="_blank"
+                            <a
+                                href="https://www.linkedin.com/in/elliotvhill/"
+                                class="contact-link2"
+                                target="_blank"
                                 ><span class="sr-only">LinkedIn</span
                                 ><i class="fa-brands fa-linkedin"></i
                             ></a>
                         </li>
                         <li class="contact-link heading">
-                            <a href="#" class="contact-link3" target="_blank"
+                            <a
+                                href="https://codepen.io/ell8031"
+                                class="contact-link3"
+                                target="_blank"
                                 ><span class="sr-only">Codepen</span
                                 ><i class="fa-brands fa-codepen"></i
                             ></a>
                         </li>
                         <li class="contact-link heading">
-                            <a href="#" class="contact-link4" target="_blank"
+                            <a
+                                href="https://www.threads.net/@elliotvh.dev"
+                                class="contact-link4"
+                                target="_blank"
                                 ><span class="sr-only">Threads</span
                                 ><i class="fa-brands fa-threads"></i
                             ></a>
