--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <nav id="navbar">
                 <div class="nav-left">
                     <h2 class="nav-heading heading" id="nav-header">
-                        EVH | web developer
+                        <a href="#" class="heading">EVH | web developer</a>
                     </h2>
                 </div>
                 <div class="nav-right mobile-wrapper">
@@ -87,24 +87,31 @@
                 <div class="about-text">
                     <p class="text-block">
                         I am a web developer and junior software engineer with
-                        over <span class="em">10 years of experience</span> in customer service.
+                        over <span class="em">10 years of experience</span> in
+                        customer service.
                     </p>
                     <p class="text-block">
-                        <span class="em">In 2023,</span> I graduated from a full stack software
-                        engineering boot camp, where I gained experience with
-                        the latest front- and back-end programming languages,
-                        tools, and methodologies—including <span class="em">HTML, CSS, SASS,
-                        JavaScript, Node.JS, React.JS, MongoDB, Mongoose, SQL,
-                        Python, and Django</span>—and completed a number of projects
-                        focused on the real-world applications of web
-                        development principles and best practices.
+                        <span class="em">In 2023,</span> I graduated from a full
+                        stack software engineering boot camp, where I gained
+                        experience with the latest front- and back-end
+                        programming languages, tools, and
+                        methodologies—including
+                        <span class="em"
+                            >HTML, CSS, SASS, JavaScript, Node.JS, React.JS,
+                            MongoDB, Mongoose, SQL, Python, and Django</span
+                        >—and completed a number of projects focused on the
+                        real-world applications of web development principles
+                        and best practices.
                     </p>
                     <p class="text-block">
                         In my previous role as an enterprise customer support
                         representative, I developed a strong customer-centric
                         mindset, facilitated cross-functional communication
-                        between product and engineering teams, and consistently
-                        exceeded expectiations in customer satisfaction.
+                        between product and engineering teams, and
+                        <span class="em"
+                            >consistently exceeded expectiations</span
+                        >
+                        in customer satisfaction.
                     </p>
                 </div>
             </section>
@@ -115,55 +122,46 @@
                 <h2 class="section-heading heading">Projects</h2>
                 <div class="projects-gallery">
                     <div class="project-tile" id="project1">
-                        <h3 class="heading">Project1</h3>
-
-                        <div class="img-container tile-thumb"></div>
-                        <div class="project-description">
-                            <!-- <p class="readMore">
-                                This is a description of a project. This should
-                                show a read more link.
-                            </p> -->
-                            <p>
-                                This is a description of a project.
-                                <span class="read-more hide" id="read-more1">
-                                    Read more</span
-                                >
-                            </p>
-                        </div>
+                        <a
+                            href="https://codepen.io/ell8031/pen/NWZbddm"
+                            target="_blank"
+                            class="heading">
+                            <h3 class="heading">Balance Sheet</h3>
+                            <div class="img-container tile-thumb">
+                                <img
+                                    src="https://i.imgur.com/NCFECDT.png"
+                                    class="project-thumb"
+                                    alt="a thumbnail screenshot of an example accounting balance sheet" />
+                            </div>
+                        </a>
                     </div>
                     <div class="project-tile" id="project2">
-                        <h3 class="heading">Project2</h3>
-                        <div class="img-container tile-thumb"></div>
-                        <div class="project-description">
-                            <!-- <p class="readMore">
-                                Lorem ipsum dolor sit, amet consectetur
-                                adipisicing elit. Deleniti quis quaerat hic
-                                minima asperiores neque, numquam nostrum nemo
-                                quia accusantium qui sapiente pariatur, at
-                                consectetur blanditiis sed, delectus eveniet.
-                            </p> -->
-                            <p>
-                                This is a description of a project.
-                                <span class="read-more hide" id="read-more1">
-                                    Read more</span
-                                >
-                            </p>
-                        </div>
+                        <a
+                            href="https://codepen.io/ell8031/pen/poXPwqY"
+                            target="_blank"
+                            class="heading">
+                            <h3 class="heading">Product Page</h3>
+                            <div class="img-container tile-thumb">
+                                <img
+                                    src="https://i.imgur.com/eE2YVLj.png"
+                                    class="project-thumb"
+                                    alt="a thumbnail image of a product page for a fictional product" />
+                            </div>
+                        </a>
                     </div>
                     <div class="project-tile" id="project3">
-                        <h3 class="heading">Project3</h3>
-                        <div class="img-container tile-thumb"></div>
-                        <div class="project-description">
-                            <p class="readMore">
-                                This is a description of a project.
-                            </p>
-                            <p>
-                                This is a description of a project.
-                                <span class="read-more hide" id="read-more1">
-                                    Read more</span
-                                >
-                            </p>
-                        </div>
+                        <a
+                            href="https://codepen.io/ell8031/pen/YzoZjLV"
+                            target="_blank"
+                            class="heading">
+                            <h3 class="heading">CSS City</h3>
+                            <div class="img-container tile-thumb">
+                                <img
+                                    src="https://i.imgur.com/OwRg8at.png"
+                                    class="project-thumb"
+                                    alt="a thumbnail image of a multi-colored cityscape built with css elements" />
+                            </div>
+                        </a>
                     </div>
                 </div>
             </section>
