--- a/index.html
+++ b/index.html
@@ -121,46 +121,40 @@
                 aria-labelledby="work-projects-section">
                 <h2 class="section-heading heading">Projects</h2>
                 <div class="projects-gallery">
-                    <div class="project-tile" id="project1">
+                    <div class="project-tile" id="project-tile1">
                         <a
                             href="https://codepen.io/ell8031/pen/NWZbddm"
                             target="_blank"
                             class="heading">
-                            <h3 class="heading">Balance Sheet</h3>
-                            <div class="img-container tile-thumb">
-                                <img
-                                    src="https://i.imgur.com/NCFECDT.png"
-                                    class="project-thumb"
-                                    alt="a thumbnail screenshot of an example accounting balance sheet" />
-                            </div>
+                            <img
+                                src="https://i.imgur.com/NCFECDT.png"
+                                class="project-thumb"
+                                alt="a thumbnail screenshot of an example accounting balance sheet" />
+                            <div class="overlay">Balance sheet</div>
                         </a>
                     </div>
-                    <div class="project-tile" id="project2">
+                    <div class="project-tile" id="project-tile2">
                         <a
                             href="https://codepen.io/ell8031/pen/poXPwqY"
                             target="_blank"
                             class="heading">
-                            <h3 class="heading">Product Page</h3>
-                            <div class="img-container tile-thumb">
-                                <img
-                                    src="https://i.imgur.com/eE2YVLj.png"
-                                    class="project-thumb"
-                                    alt="a thumbnail image of a product page for a fictional product" />
-                            </div>
+                            <img
+                                src="https://i.imgur.com/eE2YVLj.png"
+                                class="project-thumb"
+                                alt="a thumbnail image of a product page for a fictional product" />
+                            <div class="overlay">Product Page</div>
                         </a>
                     </div>
-                    <div class="project-tile" id="project3">
+                    <div class="project-tile" id="project-tile3">
                         <a
                             href="https://codepen.io/ell8031/pen/YzoZjLV"
                             target="_blank"
                             class="heading">
-                            <h3 class="heading">CSS City</h3>
-                            <div class="img-container tile-thumb">
-                                <img
-                                    src="https://i.imgur.com/OwRg8at.png"
-                                    class="project-thumb"
-                                    alt="a thumbnail image of a multi-colored cityscape built with css elements" />
-                            </div>
+                            <img
+                                src="https://i.imgur.com/OwRg8at.png"
+                                class="project-thumb"
+                                alt="a thumbnail image of a multi-colored cityscape built with css elements" />
+                            <div class="overlay">CSS City</div>
                         </a>
                     </div>
                 </div>
