--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
                 <div class="projects-gallery">
                     <div class="project-tile" id="project-tile1">
                         <a
-                            href="https://codepen.io/ell8031/pen/NWZbddm"
+                            href="https://rove-curious.surge.sh/"
                             target="_blank"
                             class="heading">
                             <img
-                                src="https://i.imgur.com/NCFECDT.png"
+                                src="https://i.imgur.com/bs1prMx.png"
                                 class="project-thumb"
-                                alt="a thumbnail screenshot of an example accounting balance sheet" />
-                            <div class="overlay">Balance sheet</div>
+                                alt="a thumbnail image of image generator web app" />
+                            <div class="overlay">Rove Curious</div>
                         </a>
                     </div>
                     <div class="project-tile" id="project-tile2">
@@ -155,6 +155,18 @@
                                 class="project-thumb"
                                 alt="a thumbnail image of a multi-colored cityscape built with css elements" />
                             <div class="overlay">CSS City</div>
+                        </a>
+                    </div>
+                    <div class="project-tile" id="project-tile4">
+                        <a
+                            href="https://codepen.io/ell8031/pen/NWZbddm"
+                            target="_blank"
+                            class="heading">
+                            <img
+                                src="https://i.imgur.com/NCFECDT.png"
+                                class="project-thumb"
+                                alt="a thumbnail screenshot of an example accounting balance sheet" />
+                            <div class="overlay">Balance sheet</div>
                         </a>
                     </div>
                 </div>
@@ -202,6 +214,14 @@
                                 ><span class="sr-only">Threads</span
                                 ><i class="fa-brands fa-threads"></i
                             ></a>
+                        </li>
+                        <li class="contact-link heading">
+                            <a
+                                href="https://www.freecodecamp.com/ell8031"
+                                class="contact-link4"
+                                target="_blank"
+                                ><span class="sr-only">freeCodeCamp</span
+                                ><i class="fa-brands fa-free-code-camp"></i></a>
                         </li>
                     </ul>
                 </div>
