added fcc profile link

--- a/index.html
+++ b/index.html
@@ -178,6 +178,15 @@
                                 ><i class="fa-brands fa-threads"></i
                             ></a>
                         </li>
+                        <li class="contact-link heading">
+                            <a
+                                href="https://www.freecodecamp.com/ell8031"
+                                class="contact-link4"
+                                target="_blank"
+                                ><span class="sr-only">freeCodeCamp</span
+                                ><i class="fa-brands fa-free-code-camp"></i
+                            ></a>
+                        </li>
                     </ul>
                 </div>
             </section>
