--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <span class="em"
                             >consistently exceeded expectiations</span
                         >
-                        in customer satisfaction.
+                        in customer satisfaction and business retention.
                     </p>
                 </div>
             </section>
@@ -122,14 +122,14 @@
                     </div>
                     <div class="project-tile" id="project-tile3">
                         <a
-                            href="https://codepen.io/ell8031/pen/YzoZjLV"
+                            href="https://live-markdown-viewer.vercel.app/"
                             target="_blank"
                             class="heading">
                             <img
-                                src="https://i.imgur.com/OwRg8at.png"
+                                src="https://i.imgur.com/1HqoOiu.png"
                                 class="project-thumb"
-                                alt="a thumbnail image of a multi-colored cityscape built with css elements" />
-                            <div class="overlay">CSS City</div>
+                                alt="a thumbnail image of a markdown viewer web app" />
+                            <div class="overlay">Markdown Viewer</div>
                         </a>
                     </div>
                 </div>
